--- a/proj1/project1/Dockerfile
+++ b/proj1/project1/Dockerfile
@@ -1,11 +1,11 @@
 # Use an official Node.js runtime as a base image
-FROM node:14
+FROM node:20-alpine
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json to the working directory
-COPY package*.json ./
+COPY package*.json .
 
 # Install dependencies
 RUN npm install
@@ -14,7 +14,7 @@ RUN npm install
 COPY . .
 
 # Expose the port on which your app runs
-EXPOSE 3000
+EXPOSE 8000
 
 # Define the command to run your application
 CMD ["node", "index.mjs"]
